--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <tbody>
                                     <tr>
                                         <td colspan="2">Nama Pemilik</td>
-                                        <td colspan="2">: WNDRI TIFEL </td>
+                                        <td colspan="2">: WNEDRI TIFEL </td>
                                     </tr>
                                     <tr>
                                         <td colspan="2">Alamat Pemilik</td>
@@ -113,7 +113,7 @@
                                     </tr>
                                     <tr>
                                         <td width="50%">Nomor Registrasi Kendaraan</td>
-                                        <td width="50%">: B 9249 TW </td>
+                                        <td width="50%">: B 9249 TIW </td>
                                     </tr>
                                     <tr>
                                         <td width="50%">Nomor Rangka Kendaraan</td>
@@ -477,3 +477,4 @@
 </body>
 <!-- END: Body-->
 </html>
+
