--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <tbody>
                                     <tr>
                                         <td colspan="2">Nama Pemilik</td>
-                                        <td colspan="2">: WNEDRI TIFEL </td>
+                                        <td colspan="2">: WNENDRI TIFEL </td>
                                     </tr>
                                     <tr>
                                         <td colspan="2">Alamat Pemilik</td>
@@ -477,4 +477,5 @@
 </body>
 <!-- END: Body-->
 </html>
+
 
